--- a/templates/index.html
+++ b/templates/index.html
@@ -22,88 +22,13 @@
 <body>
 
 <div class="container-fluid bg-1 text-center">
-    <h3>Let's do human action classification</h3>  
-
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <!-- Do something with the message -->
-                <div id="alert">
-                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                    <strong>ERROR: </strong> {{ message }} 
-                </div>
-
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-
-    {% if obj.is_video_display %}
-    <script>
-
-    var source = new EventSource("{{ url_for('analyze', filename=obj.video) }}");
-    source.onmessage = function(event) {
-      $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
-      $('.progress-bar-label').text(event.data+'%');
-
-      if(event.data == 100){
-        source.close()
-        $('#result').css("display","block")        
-        $('#result div').prepend('<img src="{{ url_for('get_result_video', filename=obj.video) }}" width="480" height="320"/>') 
-        $('#result div').prepend('<br/>')
-        $('#result div').prepend('<a href="{{ url_for('get_analyzed_file', filename=obj.video) }}">Download Result File</a>')
-      }
-    }
-    </script>
-    <div > 
-        Input video <br/>
-        <video width="480" height="320" controls>
-        <source src={{ url_for('get_file', filename=obj.video) }} alt="User Video" type="video/mp4">
-        Your browser does not support the video tag.
-        </video>
-        <br><br>Video Analysis Progress bar<br><br>
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-            <span class="progress-bar-label">0%</span>
-          </div>
-        </div>
-        <div id="result" style="display:none">
-          <br>Video Analysis Result<br>          
-          <div>
-          </div>          
-        </div>
-        
-    </div>
-    {% else %}
-      <table class="table">
-      <tr>
-      <td>
-      <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
-        <div class="custom-file">
-          <input type="file" class="custom-file-input" name="video" id="video" accept=".mp4">
-          <label class="custom-file-label" for="video">Choose video to analyse</label>
-        </div>
-        <div class="mt-3">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
-      </td>
-      <td>
-        OR
-      </td>
-      <td>
-        <form method=POST enctype=multipart/form-data action="{{ url_for('sample') }}">
-          <video width="480" height="320" controls>
-            <source src={{ url_for('get_file', filename=obj.video) }} alt="User Video" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+  
+        <form method=POST enctype=multipart/form-data action="{{ url_for('video_feed') }}">
           <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Start</button>
           </div>
         </form>
-      </td>
-      </tr>
-      </table>
-    {% endif %}
+
 </div>
 
 </body>
