--- a/templates/index.html
+++ b/templates/index.html
@@ -47,10 +47,6 @@
 
       if(event.data == 100){
         source.close()
-        $('#result').css("display","block")        
-        $('#result div').prepend('<img src="{{ url_for("get_result_video", filename=obj.video) }}" width="480" height="320"/>') 
-        $('#result div').prepend('<br/>')
-        $('#result div').prepend('<a href="{{ url_for("get_analyzed_file", filename=obj.video) }}">Download Result File</a>')
       }
     }
     </script>
@@ -93,7 +89,7 @@
       <td>
         <form method=POST enctype=multipart/form-data action="{{ url_for('sample') }}">
           <video width="480" height="320" controls>
-            <source src={{ url_for('get_file', filename=obj.video) }} alt="User Video" type="video/mp4">
+            <source src="{{ url_for('get_file', filename=obj.video) }}" alt="User Video" type="video/mp4">
             Your browser does not support the video tag.
           </video>
           <div class="mt-3">
